--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.2",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-player": "^2.16.1"
